# mas_perception

./: .travis.yml  Dockerfile  README.md  docker-compose.yml  mas-perception.rosinstall
.github/: CODEOWNERS
.travis/: Dockerfile
mas_perception/: CMakeLists.txt  package.xml
mas_perception_libs/: CMakeLists.txt  README.md  package.xml  setup.py
mas_perception_libs/common/include/mas_perception_libs/: aliases.h  bounding_box.h  bounding_box_2d.h  point_cloud_utils.h  sac_plane_segmenter.h  use_numpy.h
mas_perception_libs/common/include/mas_perception_libs/impl/: pyboostcvconverter.hpp
mas_perception_libs/common/src/: bounding_box.cpp  bounding_box_2d.cpp  init_numpy_api.cpp  point_cloud_utils.cpp  pyboost_cv3_converter.cpp  sac_plane_segmenter.cpp
mas_perception_libs/docs/: cpp_library.md  python_package.md
mas_perception_libs/models/: class_annotation_example.yml  image_detector_test_kwargs.yml
mas_perception_libs/ros/config/: CloudFilter.cfg  PlaneFitting.cfg  cloud_filter_default_configs.yaml  plane_fitting_default_configs.yaml
mas_perception_libs/ros/include/mas_perception_libs/: bounding_box_wrapper.h  color.h  image_bounding_box.h  point_cloud_utils.h  point_cloud_utils_ros.h
mas_perception_libs/ros/include/mas_perception_libs/impl/: ros_message_serialization.hpp
mas_perception_libs/ros/launch/: cloud_processing_cpp_test.launch  cloud_processing_python_test.launch  image_detection.launch  image_detection_test.launch  image_recognition.launch  plane_segementer_test.launch
mas_perception_libs/ros/scripts/: cloud_processing_python_test  image_detection_action_server  image_detection_client_test  image_detection_server  image_detection_test  image_recognition_client_test  image_recognition_server  object_detection_test_server
mas_perception_libs/ros/src/: boost_python_module.cpp  bounding_box_wrapper.cpp  cloud_processing_test_node.cpp  image_bounding_box.cpp  plane_segmenter_test_node.cpp  point_cloud_utils.cpp  point_cloud_utils_ros.cpp
mas_perception_libs/ros/src/mas_perception_libs/: __init__.py  bounding_box.py  constants.py  detection_service_proxy.py  image_classifier.py  image_detector.py  image_recognition_service.py  image_recognition_service_proxy.py  keras_image_classifier.py  object_detector.py  ros_message_serialization.py  scene_detection_action.py  utils.py  visualization.py
mas_perception_libs/ros/test/: cloud_processing_tests.py
mas_perception_libs/ros/test/config/: cloud_processing.yaml
mcr_background_change_detection/: CMakeLists.txt
mcr_background_change_detection/ros/launch/: background_change_detection.launch
mcr_cavity_recognition/: CMakeLists.txt  package.xml
mcr_cavity_recognition/ros/include/mcr_cavity_recognition/: cavity_message_builder_ros.h
mcr_cavity_recognition/ros/src/: cavity_message_builder_ros.cpp
mcr_contour_matching/: CMakeLists.txt  package.xml
mcr_contour_matching/common/src/: contour_finder.cpp
mcr_contour_matching/ros/include/mcr_contour_matching/: contour_template_matcher_ros.h
mcr_contour_matching/ros/src/: contour_finder_ros.cpp  contour_template_matcher_ros.cpp
mcr_image_filter/ros/include/mcr_image_filter/: image_filter_node.h
mcr_leg_detection/: CMakeLists.txt  package.xml
mcr_leg_detection/ros/src/: calc_leg_features.cpp  leg_detection_node.cpp
mcr_linear_regression/: CMakeLists.txt  package.xml
mcr_linear_regression/ros/src/: laser_scan_linear_regression_node.cpp
mcr_nearest_object_detection/: CMakeLists.txt  package.xml
mcr_nearest_object_detection/ros/src/: nearest_object_detection_node.cpp
mcr_object_recognition_bounding_box/: CMakeLists.txt  package.xml
mcr_object_recognition_bounding_box/ros/scripts/: object_recognizer
mcr_object_recognition_bounding_box/ros/src/: cloud_color_analyzer_node.cpp
mcr_object_recognition_bounding_box/ros/tools/: collect_training_data
mcr_object_recognition_mean_circle/: CMakeLists.txt  README.md  package.xml
mcr_object_recognition_mean_circle/common/config/asus-nagoya/: classifier.pkl  label_encoder.pkl
mcr_object_recognition_mean_circle/ros/launch/: object_recognition.launch
mcr_object_recognition_mean_circle/ros/scripts/: object_recognizer
mcr_object_recognition_mean_circle/ros/test/: object_recognition_mean_circle_test.cpp
mcr_object_recognition_mean_circle/ros/tools/: train_classifier.py
mcr_people_tracking/: CMakeLists.txt  package.xml
mcr_people_tracking/common/src/: particle_filter.cpp
mcr_people_tracking/ros/src/: waist_tracking_node.cpp
mcr_perception_msgs/: CMakeLists.txt  package.xml
mcr_perception_msgs/action/: DetectScene.action
mcr_perception_msgs/msg/: BoundingBox2D.msg  ImageDetection.msg  Object.msg  Person.msg  Plane.msg
mcr_perception_msgs/srv/: DetectImage.srv  GetSegmentedImage.srv  RecognizeImage.srv
mcr_perception_selectors/ros/launch/: object_selector.launch
mcr_perception_states/: CMakeLists.txt  package.xml  setup.py
mcr_perception_tools/: CMakeLists.txt  package.xml
mcr_perception_tools/ros/src/: webcam_publisher.cpp
mcr_pose_estimation/: CMakeLists.txt
mcr_scene_segmentation/: CMakeLists.txt  README.md  package.xml
mcr_scene_segmentation/common/include/mcr_scene_segmentation/: cloud_accumulation.h  laserscan_segmentation.h  octree_pointcloud_occupancy_colored.h  pointcloud_segmentation.hpp  scene_segmentation.h
mcr_scene_segmentation/common/src/: cloud_accumulation.cpp  scene_segmentation.cpp
mcr_scene_segmentation/ros/config/: SceneSegmentation.cfg  scene_segmentation_constraints.yaml
mcr_scene_segmentation/ros/include/mcr_scene_segmentation/: bounding_box_visualizer.h  clustered_point_cloud_visualizer.h  label_visualizer.h  scene_segmentation_node.h
mcr_scene_segmentation/ros/include/mcr_scene_segmentation/impl/: bounding_box_visualizer.hpp  clustered_point_cloud_visualizer.hpp  helpers.hpp  label_visualizer.hpp
mcr_scene_segmentation/ros/launch/: scene_segmentation.launch
mcr_scene_segmentation/ros/src/: laserscan_segmentation.cpp  pointcloud_segmentation.cpp  scene_segmentation_node.cpp
(+2 files in other folders)
