<?xml version="1.0"?>
<package>
  <name>mcr_scene_segmentation</name>
  <version>0.0.1</version>
  <description>Scene segmentation</description>

  <maintainer email="mwasil.wasil@smail.inf.h-brs.de">Mohammad Wasil</maintainer>

  <license>GPLv3</license>

  <author email="sergey.alexandrov@smail.inf.h-brs.de">Sergey Alexandrov</author>
  <author email="santosh.thoduka@h-brs.de">Santosh Thoduka</author>
  <author email="mwasil.wasil@smail.inf.h-brs.de">Mohammad Wasil</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>mcr_perception_msgs</build_depend>
  <build_depend>mcr_algorithms</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>mcr_perception_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <test_depend>roslaunch</test_depend>

</package>
